# minecraft_console_rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  password_list.txt
src/: landing.rs  login.rs  main.rs
src/password_lib/src/: lib.rs
static/: authed.html.tera  index.html.tera  landing_page.html.tera  registered.html.tera
static/css/: style.css
